# dirtviz-slack-bot

./: README.md  lambda_function.py  pyproject.toml  requirements.txt
.github/workflows/: deploy-lambda.yml
src/dirtviz_slack_bot/: cli.py  lambda_function.py
